--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -150,7 +150,7 @@
             name="openLCA">
          <property
                name="windowImages"
-               value="icons/logo_16_32bit.png,icons/logo_32_32bit.png,icons/logo_48_32bit.png,icons/logo_64.png,icons/logo_128.png">
+               value="/olca-app-core/icons/logo_16_32bit.png,/olca-app-core/icons/logo_32_32bit.png,/olca-app-core/icons/logo_48_32bit.png,/olca-app-core/icons/logo_64.png,/olca-app-core/icons/logo_128.png">
          </property>
          <property
                name="aboutText"
@@ -158,7 +158,7 @@
          </property>
          <property
                name="aboutImage"
-               value="icons/about.png">
+               value="/olca-app-core/icons/about.png">
          </property>
          <property
                name="appName"
@@ -320,9 +320,6 @@
                level="9"
                name="%model.category.name.5">
          </category>
-         <referenceSearcher
-               class="org.openlca.core.model.referencesearch.SourceReferenceSearcher">
-         </referenceSearcher>
       </modelComponent>
       <modelComponent
             class="org.openlca.core.model.Actor">
@@ -330,9 +327,6 @@
                level="8"
                name="%model.category.name">
          </category>
-         <referenceSearcher
-               class="org.openlca.core.model.referencesearch.ActorReferenceSearcher">
-         </referenceSearcher>
       </modelComponent>
       <modelComponent
             class="org.openlca.core.model.UnitGroup">
@@ -340,9 +334,6 @@
                level="7"
                name="%model.category.name.6">
          </category>
-         <referenceSearcher
-               class="org.openlca.core.model.referencesearch.UnitGroupReferenceSearcher">
-         </referenceSearcher>
       </modelComponent>
       <modelComponent
             class="org.openlca.core.model.FlowProperty">
@@ -350,9 +341,6 @@
                level="6"
                name="%model.category.name.1">
          </category>
-         <referenceSearcher
-               class="org.openlca.core.model.referencesearch.FlowPropertyReferenceFinder">
-         </referenceSearcher>
       </modelComponent>
       <modelComponent
             class="org.openlca.core.model.Flow">
@@ -360,9 +348,6 @@
                level="5"
                name="%model.category.name.0">
          </category>
-         <referenceSearcher
-               class="org.openlca.core.model.referencesearch.FlowReferenceSearcher">
-         </referenceSearcher>
       </modelComponent>
       <modelComponent
             class="org.openlca.core.model.Process">
@@ -370,9 +355,6 @@
                level="4"
                name="%model.category.name.7">
          </category>
-         <referenceSearcher
-               class="org.openlca.core.model.referencesearch.ProcessReferenceSearcher">
-         </referenceSearcher>
       </modelComponent>
       <modelComponent
             class="org.openlca.core.model.LCIAMethod">
@@ -387,9 +369,6 @@
                level="2"
                name="%model.category.name.3">
          </category>
-         <referenceSearcher
-               class="org.openlca.core.model.referencesearch.ProductSystemReferenceSearcher">
-         </referenceSearcher>
       </modelComponent>
       <modelComponent
             class="org.openlca.core.model.Project">
