--- a/olca-app/build.properties
+++ b/olca-app/build.properties
@@ -50,7 +50,6 @@ bin.includes = plugin.xml,\
                libs/mysql-connector-java-5.1.23.jar,\
                libs/ojalgo-33.0.jar,\
                libs/olca-blas-1.1.0.jar,\
-               libs/olca-core-1.0.0.jar,\
                libs/olca-ecospold-1-1.0.0.jar,\
                libs/olca-formula-1.0.0.jar,\
                libs/olca-ilcd-1.0.0.jar,\
@@ -75,5 +74,6 @@ bin.includes = plugin.xml,\
                libs/org.eclipse.persistence.core-2.4.0.jar,\
                libs/org.eclipse.persistence.jpa-2.4.0.jar,\
                libs/org.eclipse.persistence.jpa.jpql-2.4.0.jar,\
-               plugin_customization.ini
+               plugin_customization.ini,\
+               libs/olca-core-1.0.0.jar
 
