--- a/olca-app/build.properties
+++ b/olca-app/build.properties
@@ -75,5 +75,7 @@ bin.includes = plugin.xml,\
                libs/org.eclipse.persistence.jpa-2.4.0.jar,\
                libs/org.eclipse.persistence.jpa.jpql-2.4.0.jar,\
                plugin_customization.ini,\
-               libs/olca-core-1.0.0.jar
+               libs/olca-core-1.0.0.jar,\
+               libs/derby-10.10.1.1.jar,\
+               libs/guava-14.0.1.jar
 
