--- a/olca-app/.classpath
+++ b/olca-app/.classpath
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="libs/derby-10.10.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/guava-14.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-core-1.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-2-1.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.antlr-3.2.0.v201206041011.jar"/>
