--- a/olca-app/.classpath
+++ b/olca-app/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry exported="true" kind="lib" path="libs/derby-10.10.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/guava-14.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-core-1.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-core-1.0.0.jar" sourcepath="/olca-core/src/main/java"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-2-1.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.antlr-3.2.0.v201206041011.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.asm-3.3.1.v201206041142.jar"/>
