Removed unnecessary extension points; Changed IDs in Extensions to be consistent;

--- a/olca-app/build.properties
+++ b/olca-app/build.properties
@@ -17,7 +17,6 @@ bin.includes = plugin.xml,\
                splash.bmp,\
                openLCA.product,\
                html/,\
-               libs/,\
                libs/bcprov-jdk16-1.46.jar,\
                libs/commons-beanutils-1.8.3.jar,\
                libs/commons-codec-1.5.jar,\
@@ -31,7 +30,6 @@ bin.includes = plugin.xml,\
                libs/dom4j-1.6.1.jar,\
                libs/groovy-all-2.1.1.jar,\
                libs/gson-2.2.2.jar,\
-               libs/guava-14.0.jar,\
                libs/httpclient-4.1.1.jar,\
                libs/httpcore-4.1.jar,\
                libs/jackson-annotations-2.1.4.jar,\
@@ -77,5 +75,6 @@ bin.includes = plugin.xml,\
                plugin_customization.ini,\
                libs/olca-core-1.0.0.jar,\
                libs/derby-10.10.1.1.jar,\
-               libs/guava-14.0.1.jar
+               libs/guava-14.0.1.jar,\
+               libs/bonecp-0.8.0-rc1.jar
 
