--- a/olca-app/.classpath
+++ b/olca-app/.classpath
@@ -9,7 +9,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.core-2.4.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.jpa-2.4.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.jpa.jpql-2.4.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/commons-beanutils-1.8.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/commons-beanutils-1.8.3.jar" sourcepath="C:/Users/Besitzer/.m2/repository/commons-beanutils/commons-beanutils/1.8.3/commons-beanutils-1.8.3-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-codec-1.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-collections-3.2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-compress-1.4.1.jar"/>
@@ -46,7 +46,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/poi-3.9.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/poi-ooxml-3.9.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/poi-ooxml-schemas-3.9.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/slf4j-api-1.7.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/slf4j-api-1.7.2.jar" sourcepath="C:/Users/Besitzer/.m2/repository/org/slf4j/slf4j-api/1.7.2/slf4j-api-1.7.2-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/slf4j-log4j12-1.7.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/stax-api-1.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/trove4j-3.0.3.jar"/>
@@ -58,7 +58,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/xml-apis-1.0.b2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/xmlbeans-2.3.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/bcprov-jdk16-1.46.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/"/>
+	<classpathentry exported="true" kind="lib" path="libs/bonecp-0.8.0-rc1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
