--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -66,7 +66,8 @@
             default="false"
             icon="icons/model.gif"
             id="editors.productsystem"
-            name="%editor.name.6">
+            name="%editor.name.6" 
+            contributorClass="org.openlca.app.editors.actions.ProductSystemActionContributor">
       </editor>
       <editor
             class="org.openlca.core.editors.result.ResultEditor"
