analysis result view - 1st page

--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -77,9 +77,12 @@
             id="editors.impactresult"
             name="Result viewer">
       </editor>
+      
+      <!-- re-add the action contributor
+         contributorClass="org.openlca.core.editors.analyze.AnalyzeActionContributor"
+      -->
       <editor
             class="org.openlca.core.editors.analyze.AnalyzeEditor"
-            contributorClass="org.openlca.core.editors.analyze.AnalyzeActionContributor"
             default="false"
             icon="icons/analyze.gif"
             id="editors.analyze"
